--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -344,3 +344,6 @@ MappedUniqueNetIdTypes=(("EOSPlus","EOS"))
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/Engine.UserInterfaceSettings]
+UIScaleRule=ScaleToFit
+
