EOS 말고 GCP로 개인 서버 만들어서 성공적으로 실행완료 모바일도 연결확인 캐릭터들 간단히 생성 OutGame 제작중

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,16 +4,16 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Engine/Maps/Entry.Entry
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/MoblieGame.JMSGameInstance
-GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+GameInstanceClass=/Script/MoblieGame.JMSDedicatedGameInstance
+GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -309,41 +309,4 @@ bMirrorPresenceToEAS=True
 bUseNewLoginFlow=True
 SteamTokenType=Session
 NintendoTokenType=NintendoServiceAccount
-
-[OnlineSubsystemEOS]
-bEnabled=true
-
-[OnlineSubsystem]
-DefaultPlatformService=EOS
-
-[OnlineSubsystem]
-DefaultPlatformService=EOSPlus
-NativePlatformService=Steam
-
-[OnlineSubsystemEOSPlus]
-bEnabled=true
-
-[OnlineSubsystemSteam]
-bEnabled=true
-SteamDevAppId=480
-bInitServerOnClient=true
-
-[/Script/Engine.GameEngine]
-!NetDriverDefinitions=ClearArray
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemEOS.NetDriverEOS",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
-
-[/Script/OnlineSubsystemEOS.NetDriverEOS]
-bIsUsingP2PSockets=true
-
-[/Script/OnlineSubsystemUtils.OnlineEngineInterfaceImpl]
-+CompatibleUniqueNetIdTypes=EOS
-+CompatibleUniqueNetIdTypes=EOSPlus
-MappedUniqueNetIdTypes=(("EOSPlus","EOS"))
-
-[/Script/OnlineSubsystemSteam.SteamNetDriver]
-NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
-
-[/Script/Engine.UserInterfaceSettings]
-UIScaleRule=ScaleToFit
 
