--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,7 +15,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
+BuildTarget=MoblieGame
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -109,6 +109,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/FirstPerson/Maps/FirstPersonMap")
++MapsToCook=(FilePath="/Game/ThirdPerson/Maps/ThirdPersonMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
