C++ 세션 생성후 세션 찾기, 진입 완료

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -108,8 +108,9 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
-+MapsToCook=(FilePath="/Game/FirstPerson/Maps/FirstPersonMap")
 +MapsToCook=(FilePath="/Game/ThirdPerson/Maps/ThirdPersonMap")
++MapsToCook=(FilePath="/Game/Map/StartUI")
++MapsToCook=(FilePath="/Game/Map/TestUI")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
