8일차 현재 세션 생성, 찾기 UI는 완성

--- a/Config/DefaultServerConfig.ini
+++ b/Config/DefaultServerConfig.ini
@@ -5,3 +5,8 @@ ServerScriptPath=~/MoblieGameServer/LinuxServer/
 ServerScriptName=MoblieGameServer.sh
 BasePort=7777
 MaxServers=10
+
+ServerResponsePort=:5000
+ServerCreatePath=/create_server
+ServerListPath=/server_list
+ServerDestroyPath=/destroy_server
