RPC로 캐릭터 선택하여 새로 빙의하는것 구현완료 지금 Chaser -> Runner에서 문제 있음 나머지는 정상작동 발판 색상변경에 대해 진행해야함

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Map/Lobbie.Lobbie
 LocalMapOptions=
 TransitionMap=/Engine/Maps/Entry.Entry
 bUseSplitscreen=False
@@ -70,7 +70,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/MoblieGame.JMSDedicatedGameInstance
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Map/StartUI.StartUI
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
@@ -139,8 +139,8 @@ r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=True
-r.AllowStaticLighting=False
-r.NormalMapsForStaticLighting=False
+r.AllowStaticLighting=True
+r.NormalMapsForStaticLighting=True
 r.ForwardShading=False
 r.VertexFoggingForOpaque=True
 r.SeparateTranslucency=False
@@ -238,7 +238,7 @@ r.Mobile.EnableMovableLightCSMShaderCulling=True
 r.Mobile.Forward.EnableLocalLights=1
 r.Mobile.Forward.EnableClusteredReflections=False
 r.Mobile.AllowDistanceFieldShadows=True
-r.Mobile.EnableMovableSpotlightsShadow=False
+r.Mobile.EnableMovableSpotlightsShadow=True
 r.GPUSkin.Support16BitBoneIndex=False
 r.GPUSkin.Limit2BoneInfluences=False
 r.SupportDepthOnlyIndexBuffers=False
