--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -108,9 +108,8 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
-+MapsToCook=(FilePath="/Game/ThirdPerson/Maps/ThirdPersonMap")
 +MapsToCook=(FilePath="/Game/Map/StartUI")
-+MapsToCook=(FilePath="/Game/Map/TestUI")
++MapsToCook=(FilePath="/Game/Map/Lobbie")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
