술래선택하는 버튼을 누군가가 활성화 하면 다른 사람은 못 선택하게 비활성화하고 시각적으로 표현함 수 있게 색상도 변경시켰다 다른 Runner들 경우에는 버튼에 쿨타임을 주었고 같은 캐릭터로는 계속 변신이 안되게 설정했다

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -368,3 +368,20 @@ bUseNewLoginFlow=True
 SteamTokenType=Session
 NintendoTokenType=NintendoServiceAccount
 
+[/Script/UdpMessaging.UdpMessagingSettings]
+EnabledByDefault=False
+EnableTransport=False
+bAutoRepair=True
+MaxSendRate=1.000000
+AutoRepairAttemptLimit=10
+WorkQueueSize=1024
+bStopServiceWhenAppDeactivates=True
+UnicastEndpoint=0.0.0.0:0
+MulticastEndpoint=230.0.0.1:6666
+MessageFormat=CborPlatformEndianness
+MulticastTimeToLive=1
+bShareKnownNodesWithActiveConnections=False
+EnableTunnel=False
+TunnelUnicastEndpoint=
+TunnelMulticastEndpoint=
+
