ui로 플레이어들의 상태 표시 제작중

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/Lobbie.Lobbie
+EditorStartupMap=/Game/Map/Lobby.Lobby
 LocalMapOptions=
 TransitionMap=/Engine/Maps/Entry.Entry
 bUseSplitscreen=False
@@ -70,7 +70,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/BP/Core/BP_JMSMultiGameInstance.BP_JMSMultiGameInstance_C
 GameDefaultMap=/Game/Map/StartUI.StartUI
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
