--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -109,7 +109,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/Map/StartUI")
-+MapsToCook=(FilePath="/Game/Map/Lobbie")
++MapsToCook=(FilePath="/Game/Map/Lobby")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
