Chaser 의 Crouch 기능 구현 멀티 가능

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/Lobby.Lobby
+EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 LocalMapOptions=
 TransitionMap=/Engine/Maps/Entry.Entry
 bUseSplitscreen=False
