버그 수정 - 게임 종료시 호출한 서버RPC가 호출이 안되어서 동기화가 안되는 문제 - 종료 명령 전에 서버 통신을 전부 마친다.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -62,7 +62,7 @@
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Map/Lobby.Lobby
 LocalMapOptions=
 TransitionMap=/Engine/Maps/Entry.Entry
 bUseSplitscreen=False
