ServerTravel로 플레이어들 전부 이동 1. 중간 난입시 스펙터 2. 모바일이 술래일경우 시작 버튼 3. 모바일 광원 4. 모바일 술래일때 공격, 앉기

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -110,6 +110,7 @@ bSkipMovies=False
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/Map/StartUI")
 +MapsToCook=(FilePath="/Game/Map/Lobby")
++MapsToCook=(FilePath="/Game/Map/Battle")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
